# Lift-Kata-Sample-Tests

./: README.md
cpp/: CMakeLists.txt
cpp/src/: lift2.h  lift3.h  lift4.h  lift5.h  lift6.h  lift7.h
cpp/test/: lift2.cpp  lift3.cpp  lift4.cpp  lift5.cpp  lift6.cpp  lift7.cpp
python/: lift3.py
python/test/: test_lift3.py  test_lift5.py  test_lift6.py  test_lift7.py
